app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assesment-app 
  labels:
    app: assesment-app
spec:
  selector:
    matchLabels:
        app: assesment-app
  replicas: 3
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: assesment-app
    spec:
      containers:
        - name: assesment-app
          image: index.docker.io/balamood/assesment:BUILD_TAG
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: assesment-app-service
  labels:
    app: assesment-app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: assesment-app


---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: assesment-ingress
  namespace: default
  labels:
    app: assesment-app
  annotations:
   alb.ingress.kubernetes.io/scheme: internet-facing
   alb.ingress.kubernetes.io/target-type: ip
   alb.ingress.kubernetes.io/group.name: singleIngress
   ingressclass.kubernetes.io/is-default-class: "true"
  
  
spec:
  ingressClassName: alb
  rules:
    - host: "7888d8ffe739d0afa99d66f4b20e7e0c.gr7.us-east-1.eks.amazonaws.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: assesment-app-service
                port:
                  number: 80
